# mercado

./: .env  Cargo.toml  diesel.toml
crates/api_models/: Cargo.toml
crates/api_models/src/: api_keys.rs  lib.rs  utils.rs
crates/api_models/src/errors/: types.rs
crates/common_enums/: Cargo.toml
crates/common_enums/src/: enums.rs
crates/common_utils/: Cargo.toml
crates/common_utils/src/: consts.rs  crypto.rs  ext_traits.rs  pii.rs  types.rs
crates/data_models/: Cargo.toml
crates/data_models/src/: api_key.rs  errors.rs  events.rs  lib.rs  transformers.rs
crates/data_models/src/configs/: defaults.rs  secrets_transformers.rs  settings.rs  validations.rs
crates/data_models/src/errors/: api_error.rs  customers_error_response.rs  db.rs  error_handlers.rs  transformers.rs  user.rs  utils.rs
crates/diesel_models/: Cargo.toml
crates/diesel_models/src/: enums.rs  generics.rs  kv.rs  lib.rs  models.rs  query.rs  schema.rs
crates/diesel_models/src/api_key/: api_key.rs  mod.rs  repository.rs
crates/diesel_models/src/user/: invite.rs  mod.rs  repository.rs  user.rs
crates/drainer/: Cargo.toml
crates/drainer/src/: handler.rs  health_check.rs  metrics.rs  query.rs  stream.rs  utils.rs
crates/external_services/: Cargo.toml
crates/external_services/src/email/: ses.rs
crates/masking/: Cargo.toml
crates/modules/: Cargo.toml
crates/modules/src/: app.rs  db.rs  lib.rs
crates/modules/src/core/: api_key.rs
crates/modules/src/routes/metrics/: request.rs
crates/modules/src/service/: api_key.rs  mod.rs  user.rs
crates/redis_interface/: Cargo.toml
crates/redis_interface/src/: commands.rs  lib.rs  types.rs
crates/router/: Cargo.toml
crates/router/src/: cache.rs  connection.rs  consts.rs  core.rs  db.rs  events.rs  external_move.rs  lib.rs  services.rs
crates/router/src/configs/: defaults.rs  secrets_transformers.rs  settings.rs  validations.rs
crates/router/src/core/: errors.rs
crates/router/src/core/errors/: api_error_response.rs
crates/router/src/routes/: app.rs
crates/router_derive/: Cargo.toml
crates/router_env/: Cargo.toml
crates/router_env/src/: metrics.rs
crates/router_env/src/logger/: setup.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: configs.rs  consumer.rs  errors.rs  lib.rs  producer.rs  scheduler.rs  utils.rs
crates/scheduler/src/consumer/types/: batch.rs
crates/scheduler/src/db/: process_tracker.rs
crates/storage_impl/: Cargo.toml
crates/storage_impl/src/: config.rs  connection.rs  errors.rs  lib.rs  mock_db.rs  redis.rs  utils.rs
crates/storage_impl/src/database/: store.rs
crates/storage_impl/src/redis/: cache.rs  kv_store.rs  pub_sub.rs
migrations/2024-03-23-144406_create_initial_tables/: up.sql
migrations/2024-03-29-123411_api_key/: up.sql
migrations/2024-03-29-123425_auth/: up.sql
migrations/2024-03-29-123430_cart/: up.sql
migrations/2024-03-29-123455_currency/: up.sql
migrations/2024-03-29-123509_customer/: up.sql
migrations/2024-03-29-123537_fulfillment/: up.sql
migrations/2024-03-29-123602_inventory/: up.sql
migrations/2024-03-29-123641_order/: up.sql
migrations/2024-03-29-123653_payment/: up.sql
migrations/2024-03-29-123717_pricing/: up.sql
migrations/2024-03-29-123740_product/: up.sql
migrations/2024-03-29-123757_promotion/: up.sql
migrations/2024-03-29-123809_region/: up.sql
migrations/2024-03-29-123843_sales_channel/: up.sql
migrations/2024-03-29-123913_stock_location/: up.sql
migrations/2024-03-29-123930_store/: up.sql
migrations/2024-03-29-123954_tax/: up.sql
migrations/2024-03-29-124012_user/: up.sql
modules/api_key/: Cargo.toml
modules/api_key/src/: core.rs  lib.rs  models.rs  repository.rs  service.rs  transformers.rs  types.rs
modules/api_key/src/models/: api_key.rs
modules/user/: Cargo.toml
modules/user/src/models/: invite.rs  user.rs
