[package]
name = "data_models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# First party deps
diesel_models = { version = "0.1.0", path = "../diesel_models", features = ["kv_store"] }

# Third party crates
error-stack = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.40"