[package]
name = "data_models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# First Party dependencies
api_models = { version = "0.1.0", path = "../api_models" }
common_utils = { version = "0.1.0", path = "../common_utils" }
diesel_models = { version = "0.1.0", path = "../diesel_models", features = ["kv_store"] }
external_services = { version = "0.1.0", path = "../external_services" }
hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces" }
masking = { version = "0.1.0", path = "../masking" }
router_env = { version = "0.1.0", path = "../router_env" }
router_derive = { version = "0.1.0", path = "../router_derive" }
redis_interface = { version = "0.1.0", path = "../redis_interface" }

# Third party crates
async-trait = "0.1.79"
actix-web = "4.3.1"
blake3 = "1.5.1"
config = { version = "0.14.0", features = ["toml"] }
diesel = { version = "2.1.0", default-features = false, features = ["postgres"] }
error-stack = "0.4.1"
mime = "0.3.17"
ring = "0.17.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
thiserror = "1.0.40"
clap = "4.5.4"
rust_decimal = { version = "1.35.0", features = ["serde-with-float", "serde-with-str"] }
num_cpus = "1.16.0"
tokio = "1.37.0"
bb8 = "0.8.1"
hex = "0.4.3"
once_cell = "1.18.0"