[package]
name = "modules"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# First party crates
api_models = { version = "0.1.0", path = "../api_models" }
common_utils = { version = "0.1.0", path = "../common_utils" }
data_models = { version = "0.1.0", path = "../data_models" }
diesel_models = { version = "0.1.0", path = "../diesel_models" }
masking = { version = "0.1.0", path = "../masking" }
redis_interface = { version = "0.1.0", path = "../redis_interface" }
hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces" }
router = { version = "0.1.0", path = "../router" }
router_env = { version = "0.1.0", path = "../router_env" }
storage_impl = { version = "0.1.0", path = "../storage_impl" }
scheduler = { version = "0.1.0", path = "../scheduler" }

# Third party crates
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "time", "64-column-tables"] }
dyn-clone = "1.0.17"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.21", features = ["serde", "serde-well-known", "std"] }
async-trait = "0.1.68"
error-stack = "0.4.1"
tokio = "1.37.0"
futures = "0.3.30"
once_cell = "1.18.0"