[package]
name = "api_key"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# First party crates
api_models = { version = "0.1.0", path = "../../crates/api_models" }
common_utils = { version = "0.1.0", path = "../../crates/common_utils" }
common_enums = { version = "0.1.0", path = "../../crates/common_enums" }
data_models = { version = "0.1.0", path = "../../crates/data_models" }
diesel_models = { version = "0.1.0", path = "../../crates/diesel_models" }
router_derive = { version = "0.1.0", path = "../../crates/router_derive" }
router = { version = "0.1.0", path = "../../crates/router" }
masking = { version = "0.1.0", path = "../../crates/masking" }
router_env = { version = "0.1.0", path = "../../crates/router_env" }
storage_impl = { version = "0.1.0", path = "../../crates/storage_impl" }

# Third party crates
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "time", "64-column-tables"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.21", features = ["serde", "serde-well-known", "std"] }
async-trait = "0.1.68"
error-stack = "0.4.1"
blake3 = "1.5.1"
