[package]
name = "user"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# First party crates
common_utils = { version = "0.1.0", path = "../../crates/common_utils" }
diesel_models = { version = "0.1.0", path = "../../crates/diesel_models" }
router_derive = { version = "0.1.0", path = "../../crates/router_derive" }
storage_impl = { version = "0.1.0", path = "../../crates/storage_impl" }

# Third party crates
diesel = { version = "2.1.0", features = ["postgres", "serde_json", "time", "64-column-tables"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.21", features = ["serde", "serde-well-known", "std"] }
async-trait = "0.1.68"